restructured the stops map and slider so they is aligned horizontally

--- a/app/assets/stylesheets/Styles.css.scss
+++ b/app/assets/stylesheets/Styles.css.scss
@@ -278,7 +278,7 @@ body{
 */
 
 .stop-title{
-		margin-top: -1em;
+		margin-top: 3em;
 	h1{
 		font-size: 3.5em;
 		color:$dark-grey-yourney;		
@@ -321,6 +321,10 @@ body{
 ***********************
 */
 
+.stop-info-wrapper{
+
+}
+
 
 .stop-info{
 
@@ -330,7 +334,8 @@ body{
 
 	border: solid 1px $border-line-col;
 	margin-bottom: 2em;
-	background:$white;	
+	background:$white;
+	min-height:4em;	
 }
 
 
@@ -358,6 +363,12 @@ body{
 .description{
 	clear: both;
 	min-height: 120px;
+
+	h1{
+		font-weight: 600;
+		font-size: 1.5em;
+
+	}
 
 	p{
 	//padding: 1em 1em 1em 1em;
