--- a/app/assets/stylesheets/_settings.css.scss
+++ b/app/assets/stylesheets/_settings.css.scss
@@ -16,4 +16,5 @@ $grey-lines:#E0E0E0;
 $border-line-col:#D7D7D7;
 $route-icons:#999;
 $dark-grey-yourney:#444444;
+$third-color:#2d394b;
 
